munin (repository)
  * Merge changes from 1.2.3->1.2.4. Some of the following entries may not
  apply.
  * Plugins: "exists $ARGV[0]" does not work with perl < 5.6.0. use
    "defined $ARGV[0]".
  * Dists: Brought dists.freebsd in line with the FreeBSD ports.
  * Dists: Merged changes from Debian Etch package. See
    dists/debian/changelog.
  * Main: Correct munin-limits pod documentation.
  * Server: filter a trivial error message from RRDtool (Deb#326061)
  * Server: A patch from trunk that makes munin-limits eat stdout/err from the
    contact.foo.command option in munin.conf. (Deb#301196)
  * Server: make munin-graph deal with RRDtool 1.0.x and 1.2.x.
  * Server: Fix thinko in category_order in munin-html.in.
  * Server: Fix handling of 'update no' on services. 
  * Server: Log warning about nodes without addresses.
  * Node: Prevent list command from polluting the node list.
  * Plugins: Fix tempfile creation by using the best method available on a given
    platform. (amavis, courier_, perdition)
  * Plugins: Fix to support the Linux cciss driver in the iostat plugin.
  * Plugins: squid_requests: Put the CDEF back that computes misses.
  * Plugins: postfix_mailvolume: Fix bad exit code test for `which postconf`.
  * Plugins: hddtemp_smartctl: Fix bugs on Solaris.  Revert back to using -A
  (attributes) rather than -a (all).  That can be specified through the
  args_$dev mechanism.  THIS CAN BREAK EXISTING SETUPS!
  * Plugins: samba: Make location of smbstatus program configurable.
  Streamline computation of foo.value. Correct typos and a thinko. Add
  configurable "ignoreipcshare". Make awk program a lot more complicated to
  deal with variations of smbstatus output. Quote error message with
  parentheseis.
  * Plugins: smart_: Allow to query several drives on the same 3ware card.
  Correct a bug when '-i' was not listed in smartargs.  Don't fail if
  no value was obtained for hard drive model. Minor enhancements and