@@ -5,7 +5,7 @@
 <head>
   <link rel="stylesheet" href="../style.css" type="text/css" /> 
   <meta http-equiv="refresh" content="300" />
-  <title>Munin :: <TMPL_VAR ESCAPE="HTML" NAME="DOMAIN"> :: <TMPL_VAR ESCAPE="HTML" NAME="NODE"></title>
+  <title>Munin :: <TMPL_VAR ESCAPE="HTML" NAME="DOMAIN"> :: year</title>
   <meta http-equiv="content-type" content="application/xhtml+xml; charset=iso-8859-1" />
   <meta name="author" content="Auto-generated by Munin" />
 </head>
